<resources>
    <string name="app_name">Your Stock</string>
    <string name="h_name">Name</string>
    <string name="h_price">Price</string>
    <string name="h_min_price">Min Price</string>
    <string name="h_max_price">Max Price</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="duration">Duration Search</string>
    <string name="push_setting">Push Setting</string>
    <string name="toggle_min">Min: &#160;▼</string>
    <string name="toggle_max">Max: &#160;▲</string>
    <string name="push_complete">Push setting completed!</string>

    <string-array name="menu_array">
        <item>Entire List</item>
        <item>Search</item>
        <item>Kosdaq</item>
        <item>PushSetting</item>
    </string-array>
    <string-array name="kinds">
        <item>KOSDAQ</item>
        <item>KOSPI</item>
        <item>Entire</item>
     </string-array>

    <string-array name="duration">
        <item>A week ago</item>
        <item>2 weeks ago</item>
        <item>A month</item>
        <item>2 months</item>
        <item>A year</item>
        <item>2 years</item>
        <item>3 years</item>
        <item>5 years</item>

    </string-array>

    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>

</resources>
