<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/h_name"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/h_name" />

            <Button
                android:id="@+id/h_price"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/h_price"
                android:textSize="6pt" />

            <Button
                android:id="@+id/h_min_price"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/h_min_price"
                android:textSize="6pt" />

            <Button
                android:id="@+id/h_max_price"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/h_max_price"
                android:textSize="6pt" />
        </LinearLayout>

        <ListView
            android:id="@+id/record_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</LinearLayout>
